Enhance setNombre validation in Persona class
Updated setNombre method to include validation for name length and character type.